@@ -1,0 +1,25 @@
+<?xml version="1.0" encoding="UTF-8"?>
+<sbml xmlns="http://www.sbml.org/sbml/level2/version2" level="2" version="2">
+ <model>
+  <listOfCompartments>
+     <compartment id="C"  constant="false"/>
+  </listOfCompartments>
+  <listOfSpecies>
+     <species id="S1" compartment="C" hasOnlySubstanceUnits="true"/>
+  </listOfSpecies>
+  <listOfParameters>
+     <parameter id="p1"/>
+  </listOfParameters>
+  <listOfRules>
+     <assignmentRule variable="C">
+        <math xmlns="http://www.w3.org/1998/Math/MathML">
+           <apply>
+              <times/>
+              <ci>p1</ci>
+              <ci>S1</ci>
+           </apply>
+        </math>
+     </assignmentRule>
+  </listOfRules>
+ </model>
+</sbml>
